# phtml

./: .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README  README.md  mypy.ini  psxml.py  pxml.py  pyproject.toml  simplemarkup.py  test_pxml.py  testpxml.py  testsimplemarkup.py
.circleci/: config.yml
pyhtml/: main.py  pyhtml.py
src/phtml/: phtml.py
src/pxml/: alias.py  attr.py  error.py  pxml.py  typehint.py
src/pyhtml/: pyhtml.py
tests/: __init__.py  conftest.py  env.py  expected_double_nested.txt  expected_nested.txt  expected_nested_oneline_sibling.txt  test_attr.py  test_phtml.py  test_pxml.py  test_pyhtml.py
tests/test_files/: expected_complex.txt  expected_nested_oneline.txt  expected_nested_sibling.txt  expected_sibling.txt  expected_single.txt
